validadno campo de telefone add mask

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 
                 <div class="form-item">
                     <label for="telefone">Telefone/Celular</label>
-                    <input type="text" name="" id="telefone">
+                    <input type="text" name="" id="telefone" class="number" maxlength="15">
                 </div>
             </div>
             <div class="block-right">
