Ajuste textos, e colocando o header e o rodape 100%

--- a/index.html
+++ b/index.html
@@ -10,78 +10,80 @@
 <body>
 
 
-<div class="container">
-    <header>
-        <section id="content-header">
+<header>
+    <section id="content-header">
+
+        <div class="container">
             <div id="banner">
-                <div id="controlls">
-                    <img src="images/arrowleft.png" alt="Seta pra esquerda" class="left">
-                    <img src="images/arrowRight.png" alt="Seta pra direita" class="right">
-                </div>
-                <div class="center">
-                    <div class="block-left">
+            <div id="controlls">
+                <img src="images/arrowleft.png" alt="Seta pra esquerda" class="left">
+                <img src="images/arrowRight.png" alt="Seta pra direita" class="right">
+            </div>
+            <div class="center">
+                <div class="block-left">
 
-                        <div id="logo">
-                            <img src="images/logo.png" alt="Logo">
-                        </div>
-
-                        <div class="info-banner">
-                            <p class="title-info-banner">
-                                CONCRETIZA OS SONHOS<br>
-                                DO EMPRESÁRIO
-                            </p>
-
-                            <p class="sub-title-info-banner">
-                                Gera aumento de faturamento,
-                                ganhos de capital e beneficios
-                                para a empresa.
-                            </p>
-
-                            <a class="button-banner">
-                                SAIBA MAIS
-                            </a>
-                        </div>
+                    <div id="logo">
+                        <img src="images/logo.png" alt="Logo">
                     </div>
-                    <div class="block-right">
-                        <div class="images">
-                            <img src="images/img_banner.png" alt="">
-                        </div>
+
+                    <div class="info-banner">
+                        <p class="title-info-banner">
+                            CONCRETIZA OS SONHOS<br>
+                            DO EMPRESÁRIO
+                        </p>
+
+                        <p class="sub-title-info-banner">
+                            Gera aumento de faturamento,
+                            ganhos de capital e beneficios
+                            para a empresa.
+                        </p>
+
+                        <a class="button-banner" href="javascript:;">
+                            SAIBA MAIS
+                        </a>
+                    </div>
+                </div>
+                <div class="block-right">
+                    <div class="images">
+                        <img src="images/img_banner.png" alt="">
                     </div>
                 </div>
             </div>
-        </section>
-    </header>
+        </div>
+        </div>
+    </section>
+</header>
+<div class="container">
     <section id="info-topcapi">
         <div class="block">
             <figure><img src="images/icos/ico-1.png" alt=""></figure>
             <div class="text">
                 <span>Criado para</span>
-                FOMENTAR VENDAS,<br>
+                FOMENTAR VENDAS, <br>
                 EQUILIBRAR FATURAMENTOS
             </div>
         </div>
         <div class="block">
             <figure><img src="images/icos/ico-2.png" alt=""></figure>
             <div class="text">
-                <span>Criado para</span>
-                FOMENTAR VENDAS, <br>
-                EQUILIBRAR FATURAMENTOS
+                <span>Estratégico para</span>
+                FIDELIZAR CLIENTES
             </div>
         </div>
         <div class="block">
             <figure><img src="images/icos/ico-3.png" alt=""></figure>
             <div class="text">
-                <span>Criado para</span>
-                FOMENTAR VENDAS, <br>
-                EQUILIBRAR FATURAMENTOS
+                <span>Compromissado com</span>
+                A EMPRESA E O <br>
+                CONSUMIDOR
             </div>
         </div>
         <div class="block">
             <figure><img src="images/icos/ico-4.png" alt=""></figure>
             <div class="text">
-                <span>Criado para</span>
-                FOMENTAR VENDAS, <br>
-                EQUILIBRAR FATURAMENTOS
+                <span>A união dos empresários</span>
+                que gera a <br>
+                TRANSFORMAÇÃO DO SOCIAL
             </div>
         </div>
     </section>
@@ -292,6 +294,9 @@
                     </div>
                 </div>
                 <div id="companies">
+
+                    <p class="title-table">Empresas parceiras</p>
+
                     <ul>
                         <li>
                             <a href="javascript:;">
@@ -327,61 +332,62 @@
             </div>
         </div>
     </section>
-    <section id="contact">
-        <h2 class="h2_contact">
-            CONTATO
-            <span class="border-bottom"></span>
-        </h2>
-
-        <p>Preencha os dados para receber um contato da ROF</p>
-
-
-        <form id="form_subimit" method="post">
-            <div class="block-left">
-                <div class="form-item">
-                    <label for="nome">Nome completo</label>
-                    <input type="text" name="" id="nome">
-                </div>
-
-                <div class="form-item">
-                    <label for="email">E-mail</label>
-                    <input type="text" name="" id="email">
-                </div>
-
-                <div class="form-item">
-                    <label for="telefone">Telefone/Celular</label>
-                    <input type="text" name="" id="telefone" class="number" maxlength="15">
-                </div>
-            </div>
-            <div class="block-right">
-                <div class="form-item small">
-                    <label for="estado">Estado</label>
-                    <select name="" id="estado">
-                        <option value=""></option>
-                        <option value="rio de janeiro">Rio de janeiro</option>
-                    </select>
-                </div>
-
-                <div class="form-item medium">
-                    <label for="cidade">Cidade</label>
-                    <select name="" id="cidade">
-                        <option value=""></option>
-                        <option value="rio de janeiro">Rio de janeiro</option>
-                    </select>
-                </div>
-
-                <div class="form-item">
-                    <label for="mensagem">Mensagem</label>
-                    <textarea name="" id="mensagem"></textarea>
-                </div>
-            </div>
-
-            <div class="btn_submit">
-                <button>QUERO CONTATO</button>
-            </div>
-        </form>
-    </section>
 </div>
+<rodape id="contact">
+    <h2 class="h2_contact">
+        CONTATO
+        <span class="border-bottom"></span>
+    </h2>
+
+    <p>Preencha os dados para receber um contato da ROF</p>
+
+    <div class="container">
+        <form id="form_subimit" method="post">
+        <div class="block-left">
+            <div class="form-item">
+                <label for="nome">Nome completo</label>
+                <input type="text" name="" id="nome">
+            </div>
+
+            <div class="form-item">
+                <label for="email">E-mail</label>
+                <input type="text" name="" id="email">
+            </div>
+
+            <div class="form-item">
+                <label for="telefone">Telefone/Celular</label>
+                <input type="text" name="" id="telefone" class="number" maxlength="15">
+            </div>
+        </div>
+        <div class="block-right">
+            <div class="form-item small">
+                <label for="estado">Estado</label>
+                <select name="" id="estado">
+                    <option value=""></option>
+                    <option value="rio de janeiro">Rio de janeiro</option>
+                </select>
+            </div>
+
+            <div class="form-item medium">
+                <label for="cidade">Cidade</label>
+                <select name="" id="cidade">
+                    <option value=""></option>
+                    <option value="rio de janeiro">Rio de janeiro</option>
+                </select>
+            </div>
+
+            <div class="form-item">
+                <label for="mensagem">Mensagem</label>
+                <textarea name="" id="mensagem"></textarea>
+            </div>
+        </div>
+
+        <div class="btn_submit">
+            <button>QUERO CONTATO</button>
+        </div>
+    </form>
+    </div>
+</rodape>
 
 
 <script type='text/javascript' src='js/MooTools-Core-1.6.0.js'></script>
