add class slid, add json para pegar os slides

--- a/index.html
+++ b/index.html
@@ -15,41 +15,8 @@
 
         <div class="container">
             <div id="banner">
-            <div id="controlls">
-                <img src="images/arrowleft.png" alt="Seta pra esquerda" class="left">
-                <img src="images/arrowRight.png" alt="Seta pra direita" class="right">
+
             </div>
-            <div class="center">
-                <div class="block-left">
-
-                    <div id="logo">
-                        <img src="images/logo.png" alt="Logo">
-                    </div>
-
-                    <div class="info-banner">
-                        <p class="title-info-banner">
-                            CONCRETIZA OS SONHOS<br>
-                            DO EMPRESÁRIO
-                        </p>
-
-                        <p class="sub-title-info-banner">
-                            Gera aumento de faturamento,
-                            ganhos de capital e beneficios
-                            para a empresa.
-                        </p>
-
-                        <a class="button-banner" href="javascript:;">
-                            SAIBA MAIS
-                        </a>
-                    </div>
-                </div>
-                <div class="block-right">
-                    <div class="images">
-                        <img src="images/img_banner.png" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </section>
 </header>
@@ -343,49 +310,49 @@
 
     <div class="container">
         <form id="form_subimit" method="post">
-        <div class="block-left">
-            <div class="form-item">
-                <label for="nome">Nome completo</label>
-                <input type="text" name="" id="nome">
+            <div class="block-left">
+                <div class="form-item">
+                    <label for="nome">Nome completo</label>
+                    <input type="text" name="" id="nome">
+                </div>
+
+                <div class="form-item">
+                    <label for="email">E-mail</label>
+                    <input type="text" name="" id="email">
+                </div>
+
+                <div class="form-item">
+                    <label for="telefone">Telefone/Celular</label>
+                    <input type="text" name="" id="telefone" class="number" maxlength="15">
+                </div>
+            </div>
+            <div class="block-right">
+                <div class="form-item small">
+                    <label for="estado">Estado</label>
+                    <select name="" id="estado">
+                        <option value=""></option>
+                        <option value="rio de janeiro">Rio de janeiro</option>
+                    </select>
+                </div>
+
+                <div class="form-item medium">
+                    <label for="cidade">Cidade</label>
+                    <select name="" id="cidade">
+                        <option value=""></option>
+                        <option value="rio de janeiro">Rio de janeiro</option>
+                    </select>
+                </div>
+
+                <div class="form-item">
+                    <label for="mensagem">Mensagem</label>
+                    <textarea name="" id="mensagem"></textarea>
+                </div>
             </div>
 
-            <div class="form-item">
-                <label for="email">E-mail</label>
-                <input type="text" name="" id="email">
+            <div class="btn_submit">
+                <button>QUERO CONTATO</button>
             </div>
-
-            <div class="form-item">
-                <label for="telefone">Telefone/Celular</label>
-                <input type="text" name="" id="telefone" class="number" maxlength="15">
-            </div>
-        </div>
-        <div class="block-right">
-            <div class="form-item small">
-                <label for="estado">Estado</label>
-                <select name="" id="estado">
-                    <option value=""></option>
-                    <option value="rio de janeiro">Rio de janeiro</option>
-                </select>
-            </div>
-
-            <div class="form-item medium">
-                <label for="cidade">Cidade</label>
-                <select name="" id="cidade">
-                    <option value=""></option>
-                    <option value="rio de janeiro">Rio de janeiro</option>
-                </select>
-            </div>
-
-            <div class="form-item">
-                <label for="mensagem">Mensagem</label>
-                <textarea name="" id="mensagem"></textarea>
-            </div>
-        </div>
-
-        <div class="btn_submit">
-            <button>QUERO CONTATO</button>
-        </div>
-    </form>
+        </form>
     </div>
 </rodape>
 
@@ -393,7 +360,8 @@
 <script type='text/javascript' src='js/MooTools-Core-1.6.0.js'></script>
 <script type='text/javascript' src='js/MooTools-More-1.6.0.js'></script>
 <script type='text/javascript' src='js/lib/topcapibox.js'></script>
-<script type='text/javascript' src='js/script.js'></script>
 <script type='text/javascript' src='js/managers.js'></script>
+<script type='text/javascript' src='js/slide.js'></script>
+<script type='text/javascript' src='js/script.js'></script>
 </body>
 </html>
