Colocando a lista de managers via json e tornando a lbox dinamica

--- a/index.html
+++ b/index.html
@@ -160,88 +160,10 @@
                             Equipe gestora
                         </p>
 
-                        <div class="block-managers">
-                            <figure>
-                                <img src="images/people/ico-1.png" alt="">
-                            </figure>
+                        <div class="recive-managers">
 
-                            <div class="text">
-                                <p class="name">RUY OLIVEIRA</p>
-
-                                <p class="texts">
-                                    Presidente da empresa ROF Promoções e
-                                    Participações Ltda e do Consolho Gestor
-                                    do SISTEMA TOP CAPI.
-                                    <a href="javascript:;" id="1">ver currículo</a>
-                                </p>
-                            </div>
                         </div>
-                        <div class="block-managers">
-                            <figure>
-                                <img src="images/people/ico-4.png" alt="">
-                            </figure>
 
-                            <div class="text">
-                                <p class="name">JOSÉ ANTÔNIO DOS ANJOS</p>
-
-                                <p class="texts">
-                                    Coordenador do Depto. Financeiro do
-                                    Sistema TOP CAPI. Tem sob sua direção
-                                    a empresa UNIPLAN
-                                    <a href="javascript:;" id="2">ver currículo</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="block-managers">
-                            <figure>
-                                <img src="images/people/ico-2.png" alt="">
-                            </figure>
-
-                            <div class="text">
-                                <p class="name">AUGUSTO SÉRGIO DO <br> ESPIRÍTO SANTO CARDOSO</p>
-
-                                <p class="texts">
-                                    Coordenador do Depto. Jurídico do
-                                    Sistema TOP CAPI
-                                    <a href="javascript:;" id="3">ver currículo</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="block-managers">
-                            <figure>
-                                <img src="images/people/ico-3.png" alt="">
-                            </figure>
-
-                            <div class="text">
-                                <p class="name">VICTOR DOS SANTOS</p>
-
-                                <p class="texts">
-                                    Coordenador do Depto. De teconologia e
-                                    dos processos de produção, segurança e
-                                    blindagem do aplicativo e portal TOP CAPI.
-                                    Tem sob sua coordenação a empresa BSA
-                                    <a href="javascript:;" id="5">ver currículo</a>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="block-managers">
-                            <figure>
-                                <img src="images/people/ico-5.png" alt="">
-                            </figure>
-
-                            <div class="text">
-                                <p class="name">LUCIA PRISTA</p>
-
-                                <p class="texts">
-                                    Coordenadora dos Deptos. de
-                                    Marketing/Comunicação e
-                                    Responsabilidade Socioambiental do
-                                    Sistema TOP CAPI. Tem sob sua
-                                    coordenação a empresa Motrix MKT e o Grupo Mktrix.
-                                    <a href="javascript:;" id="4">ver currículo</a>
-                                </p>
-                            </div>
-                        </div>
                     </div>
                 </div>
                 <div class="block-right">
