--- a/index.html
+++ b/index.html
@@ -152,6 +152,12 @@
                             <span >Abril de 2018</span>
                         </p>
                     </div>
+                    <div class="block mobile">
+                        <p>
+                            Valores de investimento:
+                            <span>sob consulta</span>
+                        </p>
+                    </div>
                     <div class="managers">
                         <p class="title-table">
                             Equipe gestora
