--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 
 <header>
     <section id="content-header">
-        <div id="banner">
+        <div class="container">
+            <div id="banner">
 
+            </div>
         </div>
     </section>
 </header>
