Add mais um item em empresas parceiras e alinhando os itens

--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
                                 <img src="images/empresas/ico-5.png" alt="">
                             </a>
                         </li>
+
+                        <li>
+                            <a href="javascript:;">
+                                <img src="images/empresas/ico-6.png" alt="">
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
