--- a/index.html
+++ b/index.html
@@ -247,16 +247,19 @@
                 <div class="form-item">
                     <label for="nome">Nome completo</label>
                     <input type="text" name="" id="nome">
+                    <span>Preencha o campo nome.</span>
                 </div>
 
                 <div class="form-item">
                     <label for="email">E-mail</label>
                     <input type="text" name="" id="email">
+                    <span>Preencha o campo e-mail.</span>
                 </div>
 
                 <div class="form-item">
                     <label for="telefone">Telefone/Celular</label>
                     <input type="text" name="" id="telefone" class="number" maxlength="15">
+                    <span>Preencha o campo Telefone/Celular.</span>
                 </div>
             </div>
             <div class="block-right">
@@ -266,19 +269,22 @@
                         <option value=""></option>
                         <option value="rio de janeiro">Rio de janeiro</option>
                     </select>
+                    <span>Selecione um Estado.</span>
                 </div>
 
                 <div class="form-item medium">
                     <label for="cidade">Cidade</label>
                     <select name="" id="cidade">
                         <option value=""></option>
-                        <option value="rio de janeiro">Rio de janeiro</option>
+                        <option value="rio de janeiro">Rio dsdsde janeiro</option>
                     </select>
+                    <span>Selecione uma cidade.</span>
                 </div>
 
                 <div class="form-item">
                     <label for="mensagem">Mensagem</label>
                     <textarea name="" id="mensagem"></textarea>
+                    <span>Preencha o campo mensagem.</span>
                 </div>
             </div>
 
