--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/topcapibox.css">
+    <link rel="stylesheet" type="text/css" href="css/slick.css"/>
 </head>
 <body>
 
@@ -15,7 +16,84 @@
     <section id="content-header">
         <div class="container">
             <div id="banner">
-
+                <div>
+                    <div class="center">
+                        <div class="logo-mobile">
+                            <img src="images/logo-mobile.png">
+                        </div><div class="block-left">
+                        <div class="logo">
+                            <img src="images/logo.png">
+                        </div>
+                        <div class="info-banner">
+                            <p class="title-info-banner">
+                                REALIZA OS SONHOS <br>  DO CONSUMIDOR
+                            </p>
+                            <p class="sub-title-info-banner">
+                                Seus gastos mensais se transforma em chances de ganhos  de capital.
+                            </p>
+                        </div>
+                        <a class="button-slide" href="http://google.com.br">SAIBA MAIS</a>
+                    </div>
+                        <div class="block-right">
+                            <div class="images">
+                                <img src="images/banner/banner1.png" alt="">
+                                <img src="images/banner/mobile/ico-1.png" class="image-mobile" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="center">
+                        <div class="logo-mobile">
+                            <img src="images/logo-mobile.png">
+                        </div><div class="block-left">
+                        <div class="logo">
+                            <img src="images/logo.png">
+                        </div>
+                        <div class="info-banner">
+                            <p class="title-info-banner">
+                                REALIZA OS SONHOS <br>  DO CONSUMIDOR
+                            </p>
+                            <p class="sub-title-info-banner">
+                                Seus gastos mensais se transforma em chances de ganhos  de capital.
+                            </p>
+                        </div>
+                        <a class="button-slide" href="http://google.com.br">SAIBA MAIS</a>
+                    </div>
+                        <div class="block-right">
+                            <div class="images">
+                                <img src="images/banner/banner2.png" alt="">
+                                <img src="images/banner/mobile/ico-2.png" class="image-mobile" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <div class="center">
+                        <div class="logo-mobile">
+                            <img src="images/logo-mobile.png">
+                        </div><div class="block-left">
+                        <div class="logo">
+                            <img src="images/logo.png">
+                        </div>
+                        <div class="info-banner">
+                            <p class="title-info-banner">
+                                REALIZA OS SONHOS <br>  DO CONSUMIDOR
+                            </p>
+                            <p class="sub-title-info-banner">
+                                Seus gastos mensais se transforma em chances de ganhos  de capital.
+                            </p>
+                        </div>
+                        <a class="button-slide" href="http://google.com.br">SAIBA MAIS</a>
+                    </div>
+                        <div class="block-right">
+                            <div class="images">
+                                <img src="images/banner/banner3.png" alt="">
+                                <img src="images/banner/mobile/ico-3.png" class="image-mobile" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -296,12 +374,21 @@
     </div>
 </rodape>
 
+<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script type="text/javascript" src="js/slick.min.js"></script>
 
+<script>
+    $.noConflict();
+    jQuery("document").ready(function () {
+        jQuery('#banner').slick();
+    });
+</script>
 <script type='text/javascript' src='js/MooTools-Core-1.6.0.js'></script>
 <script type='text/javascript' src='js/MooTools-More-1.6.0.js'></script>
 <script type='text/javascript' src='js/lib/topcapibox.js'></script>
 <script type='text/javascript' src='js/managers.js'></script>
-<script type='text/javascript' src='js/slide.js'></script>
+<!--<script type='text/javascript' src='js/slide.js'></script>-->
 <script type='text/javascript' src='js/script.js'></script>
 </body>
 </html>
