Ajuste alinhamento do conteudo no mobile

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <figure><img src="images/icos/ico-4.png" alt=""></figure>
             <div class="text">
                 <span>A união dos empresários</span>
-                que gera a <br>
+                GERA A<br>
                 TRANSFORMAÇÃO DO SOCIAL
             </div>
         </div>
