--- a/index.html
+++ b/index.html
@@ -379,9 +379,13 @@
 <script type="text/javascript" src="js/slick.min.js"></script>
 
 <script>
-    $.noConflict();
     jQuery("document").ready(function () {
-        jQuery('#banner').slick();
+        jQuery('#banner').slick({
+            infinite: true,
+            autoplay: true,
+            speed: 1000,
+            autoplaySpeed: 1000
+        });
     });
 </script>
 <script type='text/javascript' src='js/MooTools-Core-1.6.0.js'></script>
